Ingredient details fully implemented (all editable fields are displayed in form, all fields are coherent with DB)