@@ -14,12 +14,17 @@ import net.standadev.coffeecounter.data.Ingredient;
 import net.standadev.coffeecounter.data.IngredientCounter;
 import net.standadev.coffeecounter.data.IngredientType;
 
+import java.util.Locale;
+
 public class ChangeIngredientActivity extends AppCompatActivity {
 
     private Ingredient ingredient;
     EditText etIngredientType;
     EditText etIngredientName;
     EditText etIngredientPrice;
+    EditText etIngredientCurrency;
+    EditText etIngredientQuantity;
+    EditText etIngredientUnit;
     ImageButton btnUnlock;
 
     @Override
@@ -35,6 +40,9 @@ public class ChangeIngredientActivity extends AppCompatActivity {
         etIngredientType = (EditText) findViewById(R.id.etIngredientType);
         etIngredientName = (EditText) findViewById(R.id.etIngredientName);
         etIngredientPrice = (EditText) findViewById(R.id.etIngredientPrice);
+        etIngredientCurrency = (EditText) findViewById(R.id.etIngredientCurrency);
+        etIngredientQuantity = (EditText) findViewById(R.id.etIngredientQuantity);
+        etIngredientUnit = (EditText) findViewById(R.id.etIngredientUnit);
         btnUnlock = (ImageButton) findViewById(R.id.btnUnlock);
 
         // Initialize screen objects
@@ -42,19 +50,26 @@ public class ChangeIngredientActivity extends AppCompatActivity {
             IngredientCounter ic = Counter.getInstance().getIngredientCounterFromId(ingredient_id);
             ingredient = ic.getIngredient();
 
-            etIngredientType.setText( ingredient.getIngredientType().getName() );
-            etIngredientName.setText( ingredient.getName() );
-            etIngredientPrice.setText( (new Float(ingredient.getPrice())).toString() );
+
         } else {
             ingredient = new Ingredient(0, "", new IngredientType(0, ""));
         }
+
+        // Load input fields
+        etIngredientType.setText( ingredient.getIngredientType().getName() );
+        etIngredientName.setText( ingredient.getName() );
+        etIngredientPrice.setText( String.format(Locale.getDefault(), "%f", ingredient.getPrice()) );
+        etIngredientCurrency.setText( ingredient.getCurrency());
+        etIngredientQuantity.setText( String.format(Locale.getDefault(),"%f", ingredient.getQuantity())  );
+        etIngredientUnit.setText( ingredient.getUnit() );
     }
 
     public void onSaveButtonClick(View view) {
 
         ingredient.getIngredientType().setName(etIngredientType.getText().toString());
         ingredient.setName(etIngredientName.getText().toString());
-        ingredient.setPrice(new Float(etIngredientPrice.getText().toString()));
+        ingredient.setPrice(Float.valueOf(etIngredientPrice.getText().toString()));
+        ingredient.setQuantity(Float.valueOf(etIngredientQuantity.getText().toString()));
 
         try {
             Counter.getInstance().saveIngredient(ingredient);
